# GAinSAW

./: 0Record-setup  0Record-system  HOWTO.md  INSTALL.md  LICENSE  README.md  data_sources.txt  xdoTHIS  xgainsaw  xsetup  xtestgainsaw
gainsaw/: CHANGELOG.txt  INSTALL  LICENSE  MANIFEST.in  README-chains  README.rst  pyproject.toml  xrebuild
gainsaw/gainsaw/: __init__.py  align.py  bedding.py  config.py  gainsaw.conf  liftover.py  pointsets.py  process_chainfile.py  process_pointset.py  sitemap  xmap
test/: .gitignore  0README  default.gainsaw.conf  good00  good01  good02  good03  good04  good05  good06  good07  good08a  good08b  mm10.Ctbp.bed  mm39.Ctbp-points.bed  mm39.Ctbp.bed  mm39randomSNPs.bed  test00.py  test01.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py  test08a.py  test08b.py  xinitialtests  xtestall  xupdategood
test/toydata/: 0README  A.fna  A.fna.pkl  AtoB.over.chain  AtoB.over.chain.lo.pkl  AtoC.over.chain  AtoC.over.chain.lo.pkl  B.fna  B.fna.pkl  C.fna  C.fna.pkl  test.bed  testAB.out.orig  testAC.out.orig  testbedc.py  testgnsAB.py  testgnsAC.py  testpylAB.py  testpylAC.py
tools/: 0README  tidyGFF2bed.py  xtidyGFF
